--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 PORT=4000
-CORS_ORIGIN=http://localhost:3000  # Adjust as needed
+CORS_ORIGIN=http://localhost:5173  # Adjust as needed
 
-DB_SERVER=192.168.1.13/SQLEXPRESS
-DB_USER=SYN
+DB_SERVER=192.168.1.16/SQLEXPRESS
+DB_USER=sa
 DB_PASSWORD=INS
 DB_NAME=SYN_Visit
+JWT_ACCESS_SECRET = visitor25Management@Synthite*GatePass
+SECRET_KEY= crypto-gatePass@25@synthite
